syntax = "proto3";
package shortLink;
option go_package = "./protos/links";

import "annotations.proto";

service Link{
  rpc CreateShortLink(LinkRequest) returns (LinkResponse){
    option (google.api.http) = {
      post: "/create"
      body: "*"
    };
  }
  rpc GetFullLink(LinkRequest) returns (LinkResponse){
    option (google.api.http) = {
      get: "/get/{link}"
    };
  }
}

message LinkRequest {
  string link = 1;
}

message LinkResponse {
  string link =1;
}